--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4 # تحديث لـ v4
 
       - name: set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4 # تحديث لـ v4
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -22,8 +22,12 @@ jobs:
       - name: Inject App Icon
         run: |
           mkdir -p app/src/main/res/mipmap-xxhdpi
-          cp icon.png app/src/main/res/mipmap-xxhdpi/ic_launcher.png
-          # تعديل المانيفست ليتعرف على الأيقونة الجديدة
+          if [ -f "icon.png" ]; then
+            cp icon.png app/src/main/res/mipmap-xxhdpi/ic_launcher.png
+          else
+            echo "Warning: icon.png not found, using default icon"
+          fi
+          # تعديل المانيفست ليتعرف على الأيقونة
           sed -i 's/android:supportsRtl="true"/android:supportsRtl="true" android:icon="@mipmap\/ic_launcher"/' app/src/main/AndroidManifest.xml
 
       - name: Setup Gradle
@@ -33,7 +37,7 @@ jobs:
         run: ./gradlew assembleDebug --stacktrace
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4 # تحديث لـ v4 (هذا هو حل المشكلة)
         with:
           name: Anjez-App-Final
           path: app/build/outputs/apk/debug/app-debug.apk
