--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,16 +17,11 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # هذه الخطوة ستقوم بإنشاء ملفات Gradle المتوافقة تلقائياً داخل السيرفر
-      - name: Generate Gradle Wrapper
-        run: |
-          npm install -g gradle
-          gradle wrapper --gradle-version 8.0
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: 8.5 # إصدار مستقر جداً ومضمون
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      # خطوة دمج الأيقونة (اختياري لو رفعت icon.png)
       - name: Inject App Icon
         run: |
           mkdir -p app/src/main/res/mipmap-xxhdpi
@@ -35,8 +30,8 @@ jobs:
           fi
           sed -i 's/android:supportsRtl="true"/android:supportsRtl="true" android:icon="@mipmap\/ic_launcher"/' app/src/main/AndroidManifest.xml
 
-      - name: Build Debug APK
-        run: ./gradlew assembleDebug --stacktrace
+      - name: Build with Gradle
+        run: ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
