--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,12 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          gradle-version: 8.5 # إصدار مستقر جداً ومضمون
+      # خطوة مهمة: بناء ملفات التشغيل المفقودة
+      - name: Create Gradle Wrapper
+        run: gradle wrapper --gradle-version 8.5
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Inject App Icon
         run: |
