--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -18,19 +17,17 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          # شلنا الـ cache: gradle من هنا عشان سيرفرات جيت هاب واقعة
 
-      - name: Generate Gradle Wrapper
-        run: gradle wrapper --gradle-version 8.5
-
-      - name: Build Debug APK
+      - name: Build with Gradle
         run: |
+          # توليد ملفات التشغيل وبدء البناء مباشرة
+          gradle wrapper --gradle-version 8.5
           chmod +x gradlew
-          ./gradlew assembleDebug --no-daemon --stacktrace
-          # أضفنا --no-daemon عشان نضمن إن العملية تتم بنضافة ومتحصلش مشاكل في الذاكرة
+          ./gradlew assembleDebug --stacktrace --info
 
-      - name: Upload Artifact
+      - name: Upload APK
+        if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: Anjez-Build-Final
+          name: Anjez-App
           path: app/build/outputs/apk/debug/app-debug.apk
