--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,15 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      # إجبار السيرفر على تحميل إصدار 8.5 المستقر
+      - name: Setup Gradle 8.5
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: 8.5
+
       - name: Build with Gradle
         run: |
-          # توليد ملفات التشغيل وبدء البناء مباشرة
+          # توليد الـ Wrapper لنسخة 8.5 حصراً
           gradle wrapper --gradle-version 8.5
           chmod +x gradlew
-          ./gradlew assembleDebug --stacktrace --info
-
-      - name: Upload APK
-        if: success()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Anjez-App
-          path: app/build/outputs/apk/debug/app-debug.apk
+          ./gradlew assembleDebug --stacktrace
