--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,68 +1,38 @@
-name: Build Anjez Final Fix
-
-on:
-  push:
-    branches: [ main, master ]
-  workflow_dispatch:
+name: Ultimate Auto-Fix & Build
+on: [push, workflow_dispatch]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with: { java-version: '17', distribution: 'temurin' }
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Force Fix Manifest & Resources
+      - name: Hard-Fix Project
         run: |
-          # 1. تفعيل الخصائص الأساسية
-          echo "android.useAndroidX=true" > gradle.properties
-          echo "android.enableJetifier=true" >> gradle.properties
+          # إصلاح تضارب الجافا وكوتلن في كل الملفات
+          find . -name "build.gradle*" -exec sed -i "s/JavaVersion.VERSION_1_8/JavaVersion.VERSION_17/g" {} +
+          find . -name "build.gradle*" -exec sed -i "s/targetCompatibility 1.8/targetCompatibility 17/g" {} +
+          find . -name "build.gradle*" -exec sed -i "s/jvmTarget = '1.8'/jvmTarget = '17'/g" {} +
           
-          # 2. كتابة مانيفست "مضمون" يستخدم أيقونة وثيم النظام الافتراضي (عشان ميفشلش)
+          # إنشاء ملف الخصائص
+          echo -e "android.useAndroidX=true\nandroid.enableJetifier=true" > gradle.properties
+          
+          # إنشاء مانيفست طوارئ بدون موارد خارجية
           mkdir -p app/src/main
-          cat <<EOF > app/src/main/AndroidManifest.xml
-          <?xml version="1.0" encoding="utf-8"?>
-          <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-              package="com.anjez.app">
-              <application
-                  android:allowBackup="true"
-                  android:icon="@android:drawable/sym_def_app_icon"
-                  android:label="Anjez"
-                  android:supportsRtl="true"
-                  android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar">
-                  <activity 
-                      android:name=".MainActivity"
-                      android:exported="true">
-                      <intent-filter>
-                          <action android:name="android.intent.action.MAIN" />
-                          <category android:name="android.intent.category.LAUNCHER" />
-                      </intent-filter>
-                  </activity>
-              </application>
-          </manifest>
-          EOF
+          echo '<?xml version="1.0" encoding="utf-8"?><manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.anjez.app"><application android:label="Anjez" android:icon="@android:drawable/sym_def_app_icon" android:theme="@android:style/Theme.DeviceDefault.NoActionBar"><activity android:name=".MainActivity" android:exported="true"><intent-filter><action android:name="android.intent.action.MAIN"/><category android:name="android.intent.category.LAUNCHER"/></intent-filter></activity></application></manifest>' > app/src/main/AndroidManifest.xml
 
-      - name: Setup Gradle
+      - name: Setup Gradle & Build
         uses: gradle/actions/setup-gradle@v3
-        with:
-          gradle-version: 8.5
+        with: { gradle-version: 8.5 }
 
-      - name: Build Release APK
+      - name: Build
         run: |
           gradle wrapper --gradle-version 8.5
           chmod +x gradlew
-          # تنظيف وبناء
-          ./gradlew clean assembleRelease --no-daemon
+          ./gradlew clean assembleRelease --stacktrace
 
-      - name: Upload APK
-        if: success()
+      - name: Upload
         uses: actions/upload-artifact@v4
-        with:
-          name: Anjez-Store-Ready
-          path: app/build/outputs/apk/release/*.apk
+        with: { name: Final-APK, path: app/build/outputs/apk/release/*.apk }
