--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,33 +6,43 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
-        with: { java-version: '17', distribution: 'temurin' }
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
       - name: Hard-Fix Project
         run: |
-          # إصلاح تضارب الجافا وكوتلن في كل الملفات
+          # 1. إصلاح تضارب الجافا وكوتلن في كل الملفات (توحيد النسخة لـ 17)
           find . -name "build.gradle*" -exec sed -i "s/JavaVersion.VERSION_1_8/JavaVersion.VERSION_17/g" {} +
           find . -name "build.gradle*" -exec sed -i "s/targetCompatibility 1.8/targetCompatibility 17/g" {} +
           find . -name "build.gradle*" -exec sed -i "s/jvmTarget = '1.8'/jvmTarget = '17'/g" {} +
-          
-          # إنشاء ملف الخصائص
-          echo -e "android.useAndroidX=true\nandroid.enableJetifier=true" > gradle.properties
-          
-          # إنشاء مانيفست طوارئ بدون موارد خارجية
+
+          # 2. إضافة إعدادات AndroidX و Jetifier في gradle.properties لو ناقصة
+          touch gradle.properties
+          grep -q '^android.useAndroidX=true' gradle.properties || echo 'android.useAndroidX=true' >> gradle.properties
+          grep -q '^android.enableJetifier=true' gradle.properties || echo 'android.enableJetifier=true' >> gradle.properties
+
+          # 3. إنشاء مانيفست طوارئ لتفادي نقص الصور أو الثيمات
           mkdir -p app/src/main
           echo '<?xml version="1.0" encoding="utf-8"?><manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.anjez.app"><application android:label="Anjez" android:icon="@android:drawable/sym_def_app_icon" android:theme="@android:style/Theme.DeviceDefault.NoActionBar"><activity android:name=".MainActivity" android:exported="true"><intent-filter><action android:name="android.intent.action.MAIN"/><category android:name="android.intent.category.LAUNCHER"/></intent-filter></activity></application></manifest>' > app/src/main/AndroidManifest.xml
 
       - name: Setup Gradle & Build
         uses: gradle/actions/setup-gradle@v3
-        with: { gradle-version: 8.5 }
+        with:
+          gradle-version: 8.5
 
       - name: Build
         run: |
+          # توليد ملفات الـ Wrapper أولاً لضمان وجود gradlew
           gradle wrapper --gradle-version 8.5
           chmod +x gradlew
+          # بناء نسخة الـ Release مع تنظيف المخلفات القديمة
           ./gradlew clean assembleRelease --stacktrace
 
       - name: Upload
         uses: actions/upload-artifact@v4
-        with: { name: Final-APK, path: app/build/outputs/apk/release/*.apk }
+        with:
+          name: Final-Production-APK
+          path: app/build/outputs/apk/release/*.apk
